1.1.3 - ???
--------------
Bumped Rails version up to 3.0.10, updated gems accordingly.
Fix a problem with assigning/deleting roles through the GUI.
Make assignment/deletion of roles for explicit roles - don't consider (but do note) cascading for this.
Only show header for external credential login when such a method is actually used.

1.1.2 - September 1, 2011
--------------
Fix bug in Person#set_pen_names
Add spec test to cover bug
Make method instance instead of class to fix bug
Convert XML generating views to Builder from Haml
Fix bug and speed up finding works from a group
Fix HTML escaping problem for viewing lists of works in alternate bibliographic formats
Some tables are now javascript enabled
Fix security issue around password reset.

1.1.1 - August 3, 2011
--------------
Fix bug for importing - missing require

1.1.0 - July 29, 2011
--------------
-THERE ARE SOME NEW MIGRATIONS - don't forget to migrate your database
-Abstract LDAP pieces into their own module
-Fix some importing problems
-Some fixes around authentication and log in procedure, etc.
-Remove most inline styles and use CSS instead
-General cleanup of view code
-Remove most inline javascript - move to separate files and include as needed
-Introduce jQuery for javascript (note - some old Prototype stuff is still
there)
-Redid some views that were doing some tricky stuff to get the same form to do
more than one thing.
-By default prevent bots from hitting search urls.
-Add omniauth capabilities - there is sample code for openID and OAuth. At
UIUC we do shibboleth (uiuc-connections branch) and I have simple start
(working) for LDAP (omniauth-ldap branch). Should make it very easy to
customize for various remote authentications.
-Load CSL files locally instead of over the web
-Display Sherpa data in more places
-Set up for cucumber (awaiting dependancy conflict with omniauth before
turning on in the Gemfile
-Set up for newrelic profiling (instructions of a sort in Gemfile)