@@ -4,6 +4,8 @@ Bumped Rails version up to 3.0.10, updated gems accordingly.
 Fix a problem with assigning/deleting roles through the GUI.
 Make assignment/deletion of roles for explicit roles - don't consider (but do note) cascading for this.
 Only show header for external credential login when such a method is actually used.
+Fix bug after will_paginate 3.0.0 upgrade
+Prevent a possible infinite loop after saving a contributorship from even being possible
 
 1.1.2 - September 1, 2011
 --------------
